syntax = "proto3";
package note;

option go_package = "./rpc_impl";
option optimize_for = LITE_RUNTIME;

import "common.proto";

service INote {
  rpc ListByWriter(Note.ListByWriterReq) returns (Note.ListByWriterRes);
  rpc ListPublic(Note.ListPublicReq) returns (Note.ListPublicRes);
  rpc Create(Note.CreateReq) returns (Note.CreateRes);
  rpc Modify(Note.ModifyReq) returns (Note.ModifyRes);
  rpc Delete(Note.DeleteReq) returns (Note.DeleteRes);
}

message Note {
  message Data {
    string note_id = 1;
    string write_by = 2;
    string topic = 3;
    string content = 4;
    bool is_public = 5;
    int64 update_time = 6;
    int64 created_time = 7;
  }

  message ListByWriterReq {
    string operator_id = 1;

    common.Pagination page = 15;
  }

  message ListByWriterRes {
    uint32 total = 1;
    repeated Data notes = 2;
  }

  message ListPublicReq {
    string operator_id = 1;

    common.Pagination page = 15;
  }

  message ListPublicRes {
    uint32 total = 1;
    repeated Data notes = 2;
  }

  message CreateReq {
    string operator_id = 1;
    string topic = 2;
    string content = 3;
    bool is_public = 4;
  }

  message CreateRes {
  }

  message ModifyReq {
    string operator_id = 1;
    string note_id = 2;
    string password = 3;
    string topic = 4;
    string content = 5;
    bool is_public = 6;
  }

  message ModifyRes {
  }

  message DeleteReq {
    string operator_id = 1;
    string password = 2;
    string note_id = 3;
  }

  message DeleteRes {
  }
}
